[package]
name = "secret-storage-plus"
version = "0.13.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Enhanced storage engines"
license = "Apache-2.0"

[features]
default = ["iterator"]
iterator = ["cosmwasm-std/iterator"]

[lib]
# See https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
doctest = false

[dependencies]
cosmwasm-std = { version = "0.10.0", package = "secret-cosmwasm-std" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }
rand = "0.8"

[[bench]]
name = "main"
harness = false
